--- a/Prj38_Final/Base.lproj/Main.storyboard
+++ b/Prj38_Final/Base.lproj/Main.storyboard
@@ -1,24 +1,91 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Prj38_Final" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set interval in second" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kd1-ak-RTU">
+                                <rect key="frame" x="78.666666666666686" y="167" width="257" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="257" id="GJF-tv-Khx"/>
+                                    <constraint firstAttribute="height" constant="34" id="ncP-jf-E0U"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="LDp-Xv-cgf">
+                                <rect key="frame" x="160" y="352" width="94" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="94" id="6Hz-qb-b3G"/>
+                                    <constraint firstAttribute="height" constant="32" id="Ju5-8u-MXW"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="secondStepperValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="rTE-ux-FX4"/>
+                                </connections>
+                            </stepper>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dy9-BI-lIN">
+                                <rect key="frame" x="20" y="436" width="374" height="64"/>
+                                <color key="backgroundColor" red="0.66554331710000003" green="1" blue="0.52823523419999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="K2x-Xf-elL"/>
+                                    <constraint firstAttribute="width" constant="374" id="ebB-QQ-WC9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="Start"/>
+                                <connections>
+                                    <action selector="startBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="F22-sW-02e"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JWl-bk-VHy">
+                                <rect key="frame" x="192" y="253" width="30" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="46" id="1uE-UT-9hu"/>
+                                    <constraint firstAttribute="width" constant="30" id="Z7h-Jo-hfa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="38"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Dy9-BI-lIN" firstAttribute="top" secondItem="LDp-Xv-cgf" secondAttribute="bottom" constant="52" id="AYU-Yf-fWw"/>
+                            <constraint firstItem="LDp-Xv-cgf" firstAttribute="top" secondItem="JWl-bk-VHy" secondAttribute="bottom" constant="53" id="EPh-ha-DKW"/>
+                            <constraint firstItem="JWl-bk-VHy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RK1-NT-lbo"/>
+                            <constraint firstItem="Dy9-BI-lIN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RoD-xl-bHn"/>
+                            <constraint firstItem="Kd1-ak-RTU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="k01-md-fiE"/>
+                            <constraint firstItem="LDp-Xv-cgf" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="vQV-Wd-cre"/>
+                            <constraint firstItem="JWl-bk-VHy" firstAttribute="top" secondItem="Kd1-ak-RTU" secondAttribute="bottom" constant="52" id="vve-H5-Tuc"/>
+                            <constraint firstItem="LDp-Xv-cgf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wMO-rc-bjP"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="intervalIndicator" destination="JWl-bk-VHy" id="Mse-E3-bRJ"/>
+                        <outlet property="secondStepper" destination="LDp-Xv-cgf" id="8So-Kp-C9Q"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="62.771739130434788"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
